force-app/main/default/objects/Professional_Service_Estimate_List__c/Professional_Service_Estimate_List__c.object-meta.xml
<CustomObject>
    <customHelpPage>NCMT_ProfServ_HelpPage</customHelpPage>
    <description>Professional Service Estimate Lists</description>
    <label>Professional Service Estimate List</label>
    <nameField>
        <displayFormat>PSEL-{0000000000}</displayFormat>
        <label>Professional Service Estimate List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Professional Service Estimate Lists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>