force-app/main/default/objects/Professional_Service_Estimate_List__c/fields/Added_b_c_of_Construction_Escalation_ECC__c.field-meta.xml
<CustomField>
    <fullName>Added_b_c_of_Construction_Escalation_ECC__c</fullName>
    <description>Added b/c of Construction Escalation ECC</description>
    <formula>if ( text(Type__c) = &apos;ECC&apos; 
, Future_Fee_ECC__c - Current_Fee__c 
,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Added b/c of Construction Escalation ECC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>