force-app/main/default/objects/Professional_Service_Estimate_List__c/fields/Current_Fee__c.field-meta.xml
<CustomField>
    <fullName>Current_Fee__c</fullName>
    <description>Current Fee</description>
    <formula>PS__r.CECC__c * Percentage_to_Use__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>