force-app/main/default/objects/Professional_Service_Estimate_List__c/fields/EDRC_EMIC_Type__c.field-meta.xml
<CustomField>
    <fullName>EDRC_EMIC_Type__c</fullName>
    <label>EDRC / EMIC Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EDRC AE</fullName>
                <default>true</default>
                <label>EDRC AE</label>
            </value>
            <value>
                <fullName>EDRC Cma</fullName>
            </value>
            <value>
                <fullName>EDRC CMc</fullName>
            </value>
            <value>
                <fullName>EDRC CMa and CMc</fullName>
            </value>
            <value>
                <fullName>EDRC Cx</fullName>
            </value>
            <value>
                <fullName>EMIC AE</fullName>
            </value>
            <value>
                <fullName>EMIC Cma</fullName>
            </value>
            <value>
                <fullName>EMIC CMc</fullName>
            </value>
            <value>
                <fullName>EMIC CMa and CMc</fullName>
            </value>
            <value>
                <fullName>EMIC Cx</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>