force-app/main/default/objects/Professional_Service_Estimate_List__c/fields/Future_Fee_ECC__c.field-meta.xml
<CustomField>
    <fullName>Future_Fee_ECC__c</fullName>
    <description>Future Fee ECC</description>
    <formula>if( text(Type__c) == &apos;ECC&apos; 
,PS__r.ECC__c  *  Percentage_to_Use__c 
,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Future Fee ECC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>