force-app/main/default/objects/Professional_Service_Estimate_List__c/fields/Percentage_ECC__c.field-meta.xml
<CustomField>
    <fullName>Percentage_ECC__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Percentage ECC</description>
    <label>Percentage ECC</label>
    <precision>10</precision>
    <scale>7</scale>
    <type>Percent</type>
</CustomField>