force-app/main/default/objects/Professional_Service_Estimate_List__c/fields/Percentage_to_Use__c.field-meta.xml
<CustomField>
    <fullName>Percentage_to_Use__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Percentage to Use</description>
    <label>Percentage to Use</label>
    <precision>10</precision>
    <scale>7</scale>
    <type>Percent</type>
</CustomField>