force-app/main/default/objects/Professional_Service_Estimate_List__c/fields/PS__c.field-meta.xml
<CustomField>
    <fullName>PS__c</fullName>
    <label>Professional Service Estimate</label>
    <referenceTo>Professional_Service_Estimate__c</referenceTo>
    <relationshipLabel>Professional Service Estimate Lists</relationshipLabel>
    <relationshipName>Professional_Service_Estimate_Lists</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>