force-app/main/default/objects/Professional_Service_Estimate_List__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>