force-app/main/default/objects/Professional_Service_Estimate_List__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CECC</fullName>
                <default>true</default>
                <label>CECC</label>
            </value>
            <value>
                <fullName>ECC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>