force-app/main/default/objects/Professional_Service_Estimate_List__c/fields/What_s_Added_b_c_of_salary_escalation__c.field-meta.xml
<CustomField>
    <fullName>What_s_Added_b_c_of_salary_escalation__c</fullName>
    <description>What&apos;s Added b/c of salary escalation</description>
    <formula>if ( text(Type__c) = &apos;CECC&apos;
,Escalated_by_Salary__c -  Current_Fee__c
,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Added b/c of salary escalation CECC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>